--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,7 @@
 <div>
   <input id="fileupload" type="file" multiple>
 </div>
+<div id="progress" class="progress">
+  <div class="progress-bar progress-bar-success"></div>
+</div>
+<div id="files" class="files"></div>
