--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
   <head>
     <title>Stuart Nelson</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link type="text/css" rel="stylesheet" href="/style.css">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="/jquery.ui.widget.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/9.5.2/jquery.fileupload.js"></script>
